Version CVS HEAD (?)

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far

Version 3.2.1 (5 Dec 2007)

  * src/RIFF.cpp, src/RIFF.h:
    - avoid Windows to perform unnecessary file stream caching which would
      decrease disk streaming performance on Windows systems otherwise

  * src/gig.cpp, src/gig.h:
    - added File::SetAutoLoad() and File::GetAutoLoad() for allowing
      applications to retrieve very superficial informations like amount of
      instruments and their names in a very fast way

Version 3.2.0 (14 Oct 2007)

  * packaging changes:
    - added Mac OSX XCode project files (patch by Toshi Nagata)
    - Dev-C++ (win32) project file is automatically updated with
      the version info from configure.in
    - the configure script can now be used in Windows with MSYS
    - added a mainpage for the Doxygen API documentation

  * src/DLS.cpp, src/DLS.h:
    - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
    - fixed write support for big-endian systems
    - improved handling of fixed length info strings - separate default
      lengths can be specified for each INFO chunk
    - added Resource::GenerateDLSID function
    - write support fix: allow regions without mapped samples
    - added method SetKeyRange() to the Region class which should be used
      instead of setting the KeyRange member variable directly
    - MoveRegion() method of Region class is now private
    - added SetGain() method to Sampler class
    - fixed crash when saving a file after a sample loop was added

  * src/gig.cpp, src/gig.h:
    - fixed segmentation fault in the gig::File destructor sequence which
      happened when gig::Group informations were accessed before
    - fixed write support for big-endian systems
    - defined lengths of a fixed set of info strings. These strings
      are saved when the file is written, even if they are empty.